--- a/models/requirements.txt
+++ b/models/requirements.txt
@@ -1,4 +1,5 @@
-fastapi
-uvicorn
-python-multipart
-faster-whisper
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+faster-whisper==1.0.3
+requests>=2.31.0
