--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.55.0",
     "@tailwindcss/vite": "^4.1.17",
+    "@xenova/transformers": "^2.17.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
